user/frontend/k8s-fe/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-srtknk
  labels:
    name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: frontend
          image: anhiuem492/frontend-srtknk:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
