user/frontend/k8s-fe/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-srtknk
  labels:
    name: frontend
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 80
      targetPort: 80
