user/frontend/k8s-fe/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-srtknk
  labels:
    name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: frontend-srtknk.cxnam.ews.en.internal
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-srtknk
              servicePort: 80
